<resources>
    <string name="app_name">Shopzz</string>
    <string name="str__validation">Please enter </string>
    <string name="str_address_title_validation">Please enter address title</string>
    <string name="str_block_validation">Please enter block</string>
    <string name="str_street_validation">Please enter street</string>
    <string name="str_avanue_validation">Please enter avanue</string>
    <string name="str_building_validation">Please enter building</string>
    <string name="str_floor_validation">Please enter floor</string>
    <string name="str_apartment_validation">Please enter apartment</string>
    <string name="str_landline_validation">Please enter landline number</string>
    <string name="str_select_country_validation">Please select country</string>
    <string name="str_select_area_validation">Please select area</string>
    <string name="str_current_password_validation">Please enter current password</string>
    <string name="str_new_password_validation">Please enter new password</string>
    <string name="str_retype_password_validation">Please enter retype password</string>
    <string name="str_password_confirmation_validation">Password confirmation does not match</string>
    <string name="str_first_name_validation">Please enter first name</string>
    <string name="str_last_name_validation">Please enter last name</string>
    <string name="str_mobile_validation">Please enter mobile number</string>
    <string name="str_mobile_length_validation">Mobile number should be 10 digits</string>
    <string name="str_confirm_password_validation">Please enter confirm password</string>
    <string name="str_privacy_policy_validation">Please check terms and conditions</string>
    <string name="str_email_validation">Please enter email address</string>
    <string name="str_password_validation">Please enter password</string>
    <string name="str_password_length_validation">The password must be at least 6 characters</string>
    <string name="str_valid_email_validation">Please enter valid email address</string>
    <string name="str_store_name_validation">Please enter store name</string>
    <string name="str_enter_promo_code_validation">Please enter promo code</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_forgot_password">Forgot password?</string>
    <string name="str_login">Login</string>
    <string name="str_or">Or</string>
    <string name="str_create_account">Create an Account</string>
    <string name="str_facebook">Facebook</string>
    <string name="str_google">Google</string>
    <string name="str_forgot_password_1">Forgot Password</string>
    <string name="str_forgot_password_2">Forgot Password? No Worries. Just enter your details below to get your password reset instructions</string>
    <string name="str_submit">Submit</string>
    <string name="str_ok">Ok</string>
    <string name="str_enter_your_email_address">Enter your email address</string>
    <string name="ste_enter_your_password">Enter your password</string>
    <string name="str_registration">Registration</string>
    <string name="str_first_name">First Name</string>
    <string name="str_enter_first_name">Enter first name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_enter_last_name">Enter last name</string>
    <string name="str_mobile_number">Mobile Number</string>
    <string name="str_enter_your_mobile_number">Enter your mobile number</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_gender">Gender</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_confirm_password">Confirm Password</string>
    <string name="str_register">Register</string>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="str_terms_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="str_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="str_save">Save</string>
    <string name="str_store_name">Store Name</string>
    <string name="str_enter_your_store_name">Enter your store name</string>
    <string name="str_request_for_vendor">Request For Vendor</string>
    <string name="str_address_title">Address Title</string>
    <string name="str_enter_address_title">Enter address title</string>
    <string name="str_block">Block</string>
    <string name="str_enter_block">Enter block</string>
    <string name="str_street">Street</string>
    <string name="str_enter_street">Enter street</string>
    <string name="str_avenue">Avenue</string>
    <string name="str_enter_avenue">Enter avenue</string>
    <string name="str_building">Building</string>
    <string name="str_enter_building">Enter building</string>
    <string name="str_floor">Floor</string>
    <string name="str_enter_floor">Enter floor</string>
    <string name="str_apartment">Apartment</string>
    <string name="str_enter_apartment">Enter apartment</string>
    <string name="str_landline_number">Landline Number</string>
    <string name="str_enter_landline_number">Enter landline number</string>
    <string name="str_set_as_my_default_address">Set as my default address</string>
    <string name="str_country">Country</string>
    <string name="str_select_country">Select country</string>
    <string name="str_area">Area</string>
    <string name="str_select_area">Select area</string>
    <string name="str_add_address">Add a New Address</string>
    <string name="str_terms_privacy">I accept T&amp;C and Privacy policy</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_vendor">VendorActivity</string>
    <string name="title_activity_address">AddressActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="str_current_password">Current Password</string>
    <string name="str_enter_current_password">Enter current password</string>
    <string name="str_new_password">New Password</string>
    <string name="str_enter_new_password">Enter new password</string>
    <string name="str_retype_new_password">Retype New Password</string>
    <string name="str_change_password">Change Password</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_support">Support</string>
    <string name="str_signout">Signout</string>
    <string name="str_setting">Settings</string>
    <string name="str_dialog_title">Confirmation</string>
    <string name="str_dialog_message">Are you sure you want to Signout??</string>
    <string name="title_activity_my_addresses">MyAddressesActivity</string>
    <string name="str_add_new_shipping_address">Add New Shipping Address</string>
    <string name="str_add_shipping_address">Add Shipping Address</string>
    <string name="str_my_addresses">My Addresses</string>
    <string name="title_activity_order_history">OrderHistoryActivity</string>
    <string name="str_update">Update</string>
    <string name="title_activity_check_internet">CheckInternetActivity</string>
    <string name="str_oops_your_internet_connection">Oops, your internet connection \nseems to be off</string>
    <string name="str_keep_clam">Keep calm and tap to retry once your\ninternet is back</string>
    <string name="str_retry">Retry</string>
    <string name="str_your_cart">Your Cart</string>
    <string name="str_edit_cart">Edit Cart</string>
    <string name="str_edit">Edit</string>
    <string name="str_done">Done</string>
    <string name="title_activity_thank_you">ThankYouActivity</string>
    <string name="str_browse_more_products">Browse More Products</string>
    <string name="str_order_no">Order No.</string>
    <string name="str_order_no_colon">Order No.: </string>
    <string name="str_order_date_time"><![CDATA[Order Date & Time]]></string>
    <string name="str_grand_total">Grand Total</string>
    <string name="str_payment_type">Payment Type</string>
    <string name="str_payment_status">Payment Status</string>
    <string name="str_payment_status_colon">Payment Status : </string>
    <string name="str_semi_colons">:</string>
    <string name="str_order_history">Order History</string>
    <string name="title_activity_on_sale_see_more">OnSaleSeeMoreActivity</string>
    <string name="str_on_sale">On Sale</string>
    <string name="title_activity_on_sale">OnSaleActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="str_total">Total :</string>
    <string name="str_sold_by">Sold by</string>
    <string name="str_sold_by_colon">Sold by : </string>
    <string name="str_check_out">Check Out</string>
    <string name="str_remove">Remove</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_yes">Yes</string>
    <string name="str_dreams_t_shirts">Dreams T-Shirts</string>
    <string name="str_200_kd">200 KD</string>
    <string name="str_dark_blue">Large - Dark Blue</string>
    <string name="str_mens_store">Mens Store</string>
    <string name="strt_home">Home</string>
    <string name="str_arabian_gulf_street_dusman_kuwait_city_123">Arabian Gulf Street, Dusman, Kuwait City, 123</string>
    <string name="str_kuwait">Kuwait</string>
    <string name="sttr_order239745239">ORDER239745239</string>
    <string name="str_02_05_2018_13_51_48">02/05/2018 13:51:48</string>
    <string name="str__5757_kd">5757 KD</string>
    <string name="str_completed">Completed</string>
    <string name="str_monalisa_painting">Monalisa Painting</string>
    <string name="str_by">by</string>
    <string name="str_artfuel">Artfuel</string>
    <string name="str__99_kd">99 KD</string>
    <string name="str_all_men">All men</string>
    <string name="str_edit_profile">Edit Profile</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="str_place_order">Place Order</string>
    <string name="str_saved_shipping_addresses">Saved Shipping Addresses</string>
    <string name="str_promo_code">Promo Code</string>
    <string name="str_enter_promo_code_here">Enter promo code here</string>
    <string name="str_apply">Apply</string>
    <string name="str_abc100">abc100</string>
    <string name="str_payment_mode">Payment Mode</string>
    <string name="str_payment_mode_colon">Payment Mode : </string>
    <string name="str_cash">Cash</string>
    <string name="str_knet">KNET</string>
    <string name="str_subtotal">SubTotal</string>
    <string name="str_shipping">Shipping</string>
    <string name="str_discount">Discount</string>
    <string name="str_order_total">Order Total</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="str_address_details">Arabian Gulf Street, Dusman, Kuwait City, 123\nKuwait</string>
    <string name="str_dreams_print_t_shirts">Dreams Print T-Shirts </string>
    <string name="str_size_m">(Size: M)</string>
    <string name="str_mens_store_s"><u>Mens Store\'s</u></string>
    <string name="str_qty">Qty :</string>
    <string name="str_price">Price :</string>
    <string name="str_order_detail">Order Detail</string>
    <string name="str_2_items">2 Items</string>
    <string name="str_khaled_huwaishel">Khaled Huwaishel</string>
    <string name="str_account">Account</string>
    <string name="str_my_orders">My Orders</string>
    <string name="str_my_shopzz">My Shopzz</string>
    <string name="str_my_likes">My Likes</string>
    <string name="str_ordered_products">Ordered Products</string>
    <string name="str_shipping_details">SHIPPING DETAILS</string>
    <string name="str_price_details">PRICE DETAILS</string>
    <string name="str_multiply"> x </string>
    <string name="str_options">Options</string>
</resources>