<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/ll_parent_margin_top"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.AddAddressActivity">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar_header_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_divider_height"
        android:background="@color/color_7" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/cb_save_address_margin_top_bottom"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/llParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/include_toolbar"
            android:layout_marginLeft="@dimen/ll_rigestration_margin_left_right"
            android:layout_marginRight="@dimen/ll_rigestration_margin_left_right"
            android:layout_marginTop="@dimen/ll_rigestration_margin_left_right"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_address_title"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_address_title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="30"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/llSelectCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/ll_country_margin_left_right"
                    android:layout_weight="1"
                    android:onClick="onViewClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/all_registration_text_margin_top"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/str_country"
                        android:textColor="@color/color_1"
                        android:textSize="@dimen/all_textview_text_size" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/lato_regular"
                            android:paddingBottom="@dimen/et_name_padding_bottom"
                            android:text="@string/str_select_country"
                            android:textColor="@color/color_8"
                            android:textSize="@dimen/all_textview_text_size" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/dropdown_arrow" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/all_edittext_underline_width"
                        android:background="@color/color_login_email_lable" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSelectArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/ll_country_margin_left_right"
                    android:layout_weight="1"
                    android:onClick="onViewClick"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/all_registration_text_margin_top"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/str_area"
                        android:textColor="@color/color_1"
                        android:textSize="@dimen/all_textview_text_size" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tvArea"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/lato_regular"
                            android:paddingBottom="@dimen/et_name_padding_bottom"
                            android:text="@string/str_select_area"
                            android:textColor="@color/color_8"
                            android:textSize="@dimen/all_textview_text_size" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:src="@mipmap/dropdown_arrow" />
                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/all_edittext_underline_width"
                        android:background="@color/color_login_email_lable" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_block"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_block"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_street"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_street"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="30"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_avenue"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etAuanue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_avenue"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="30"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_building"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etBuilding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_building"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="30"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_floor"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etFloor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_floor"
                android:imeOptions="actionNext"
                android:maxLength="10"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_apartment"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etApartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_apartment"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="30"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_mobile_number"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_your_mobile_number"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/all_registration_text_margin_top"
                android:fontFamily="@font/lato_regular"
                android:text="@string/str_landline_number"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

            <EditText
                android:id="@+id/etLandlineNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/all_edittext_input_background"
                android:fontFamily="@font/lato_regular"
                android:hint="@string/str_enter_landline_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:paddingBottom="@dimen/et_name_padding_bottom"
                android:singleLine="true"
                android:textColor="@color/color_login_email_input"
                android:textSize="@dimen/all_edittext_text_size" />

            <CheckBox
                android:id="@+id/cbSaveAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cb_save_address_margin_top_bottom"
                android:layout_marginTop="@dimen/cb_save_address_margin_top_bottom"
                android:button="@drawable/cb_save_address_background"
                android:checked="true"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onViewClick"
                android:paddingLeft="@dimen/rb_padding_left"
                android:text="@string/str_set_as_my_default_address"
                android:textColor="@color/color_1"
                android:textSize="@dimen/all_textview_text_size" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>