<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/ll_parent_margin_top"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/include_toolbar"
        layout="@layout/toolbar_header_layout" />

    <TextView
        android:id="@+id/tv_txtForgotPasswordMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tv_disc_layout_margin"
        android:fontFamily="@font/lato_regular"
        android:text="@string/str_forgot_password_2"
        android:textColor="@color/color_8"
        android:textSize="@dimen/tv_disc_text_size" />

    <TextView
        android:id="@+id/tv_txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_email_margin_left_right"
        android:layout_marginTop="@dimen/tv_email_margin_top"
        android:fontFamily="@font/lato_regular"
        android:text="@string/str_email"
        android:textColor="@color/color_1"
        android:textSize="@dimen/tv_email_text_size" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/tv_email_margin_top"
        android:layout_marginLeft="@dimen/tv_email_margin_left_right"
        android:layout_marginRight="@dimen/tv_email_margin_left_right"
        android:background="@drawable/all_edittext_input_background"
        android:hint="@string/str_enter_your_email_address"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/tv_email_margin_left_right"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tv_email_text_size" />

    <TextView
        android:id="@+id/tvSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tv_disc_layout_margin"
        android:background="@drawable/ic_background_1"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:onClick="onViewClick"
        android:inputType="textCapCharacters"
        android:padding="@dimen/tv_submit_padding"
        android:text="@string/str_submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/tv_email_text_size" />
</LinearLayout>